--- a/src/app/pages/ncs/create/ncs-create-header/ncs-create-header.component.html
+++ b/src/app/pages/ncs/create/ncs-create-header/ncs-create-header.component.html
@@ -33,6 +33,7 @@
         class="p-button-secondary"
         iconPos="right"
         icon="pi pi-save"
+        (click)="teste()"
       ></button>
     </div>
   </div>
