--- a/src/app/pages/ncs/create/steps/step2/product/product.component.css
+++ b/src/app/pages/ncs/create/steps/step2/product/product.component.css
@@ -15,6 +15,19 @@
   font-size: 12px;
   color: #7d7d7d;
 }
+
+.cabecalho h1 {
+  font-size: 25px;
+  font-weight: 500;
+  margin-bottom: 0px;
+  margin-top: 0px;
+
+}
+
+.cabecalho p {
+  font-size: 14px;
+  color: gray;
+}
 .search-box {
   display: flex;
   align-items: end;
