hotfix: remove erros

--- a/src/app/pages/ncs/create/ncs-create-stepper/ncs-create-stepper.component.css
+++ b/src/app/pages/ncs/create/ncs-create-stepper/ncs-create-stepper.component.css
@@ -17,6 +17,10 @@
 .stepper-buttons button {
   padding: 6px 12px;
 }
+.stepper {
+  width: calc(100% - 252px);
+  padding: 0 50px;
+}
 @media (max-width: 1000px) {
   .stepper {
     display: none;
