--- a/src/app/pages/ncs/create/steps/step4/identify-nc/identify-nc.component.html
+++ b/src/app/pages/ncs/create/steps/step4/identify-nc/identify-nc.component.html
@@ -9,32 +9,29 @@
         <div>
           <i class="bi bi-ticket-perforated mr-1"></i>
           <span class="info-titulo">Número</span>
-          <br />
-          <span class="info-dados">544554</span>
         </div>
+        <p class="info-dados">544554</p>
       </div>
       <div>
         <div>
           <i class="bi bi-calendar-week mr-1"></i>
           <span class="info-titulo">Data de Abertura</span>
-          <br />
-          <span class="info-dados">26/04/2022</span>
         </div>
+        <p class="info-dados">26/04/2022</p>
       </div>
       <div>
         <div>
           <i class="bi bi-calendar-week mr-1"></i>
           <span class="info-titulo">Data de Fechamento</span>
-          <br />
-          <span class="info-dados">26/04/2022</span>
         </div>
+        <p class="info-dados">26/04/2022</p>
       </div>
     </div>
   </div>
   <p-divider layout="vertical"></p-divider>
   <div class="div-ident-parceiro">
     <h2>
-      <i class="bi bi-people mr-1"></i>
+      <i class="bi bi-people"></i>
       Dados de Emissão
     </h2>
     <div class="d-flex card-data justify-content-evenly">
@@ -42,32 +39,28 @@
         <div>
           <i class="bi bi-person-circle mr-1"></i>
           <span class="info-titulo">Emissor</span>
-          <br />
-          <span class="info-dados">Elias</span>
         </div>
+        <p class="info-dados">Elias</p>
       </div>
       <div>
         <div>
           <i class="bi bi-person-circle mr-1"></i>
           <span class="info-titulo">Responsável</span>
-          <br />
-          <span class="info-dados">Janaína</span>
         </div>
+        <p class="info-dados">Janaína</p>
       </div>
       <div>
         <div>
           <i class="bi bi-geo-alt mr-1"></i>
           <span class="info-titulo">Departamento</span>
-          <br />
-          <p class="info-dados">Rh</p>
         </div>
+        <p class="info-dados">Rh</p>
       </div>
     </div>
   </div>
 </div>
 <div class="div-ident-parceiro row mt-3">
   <h1 class="titulo-parceiro">Dados do Parceiro</h1>
-  <<<<<<< HEAD
   <div class="dados-parceiro col razao-social">
     <div class="d-flex">
       <h2 class="mr-2">Razão Social</h2>
@@ -108,130 +101,62 @@
           <span class="info-titulo">E-mail</span>
           <br />
           <span class="info-dados">joao@gmail.com</span>
-          =======
-          <div class="d-flex">
-            <div class="item">
-              <div class="dados-parceiro razao-social">
-                <div class="d-flex">
-                  <h2 class="mr-2">Razão Social</h2>
-                  <p-chip>
-                    <i class="bi bi-ticket-perforated mr-2"></i>
-                    {{ 8411684 }}
-                  </p-chip>
-                </div>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Adipisci aperiam aspernatur beatae consequatur deserunt
-                  dolorem est fuga incidunt iste nam officia placeat quam quidem
-                  quisquam reprehenderit, ullam vel veritatis, vero.
-                </p>
-              </div>
-            </div>
-            <div class="item">
-              <div class="dados-parceiro">
-                <div class="dados-contato">
-                  <h1>Dados do Contato</h1>
-                  <div></div>
-                  <div class="contato-info d-flex flex-row">
-                    <i class="pi pi-user"></i>
-                    <div>
-                      <span class="info-titulo">Nome</span>
-                      <br />
-                      <span class="info-dados">João</span>
-                    </div>
-                  </div>
-                  <div class="contato-info d-flex flex-row">
-                    <i class="pi pi-phone"></i>
-                    <div>
-                      <span class="info-titulo">Telefone</span>
-                      <br />
-                      <span class="info-dados">(85) 98553-4200</span>
-                    </div>
-                  </div>
-                  <div class="contato-info d-flex flex-row">
-                    <i class="pi pi-at"></i>
-                    <div>
-                      <span class="info-titulo">E-mail</span>
-                      <br />
-                      <span class="info-dados">joao@gmail.com</span>
-                    </div>
-                  </div>
-                  >>>>>>> e594ab91e33f1a01f9cd0d5ab9c298ebb184b03d
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <<<<<<< HEAD
-        <div class="div-ident-parceiro d-flex mt-3">
-          <div class="dados-parceiro col razao-social">
-            =======
-            <div class="div-ident-parceiro d-flex flex-column flex-lg-row mt-3">
-              <div class="dados-parceiro razao-social item">
-                >>>>>>> e594ab91e33f1a01f9cd0d5ab9c298ebb184b03d
-                <h2 class="mr-2">
-                  <i class="bi bi-file-earmark-text"></i>
-                  Descrição da Não Conformidade
-                </h2>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Adipisci aperiam aspernatur beatae consequatur deserunt
-                  dolorem est fuga incidunt iste nam officia placeat quam quidem
-                  quisquam reprehenderit, ullam vel veritatis, vero.
-                </p>
-              </div>
-              <p-divider layout="vertical"></p-divider>
-              <<<<<<< HEAD
-              <div class="dados-parceiro col razao-social">
-                =======
-                <div class="dados-parceiro razao-social item">
-                  >>>>>>> e594ab91e33f1a01f9cd0d5ab9c298ebb184b03d
-                  <h2 class="mr-2">
-                    <i class="pi pi-camera"></i>
-                    Evidencias fotográficas
-                  </h2>
-                  <p-carousel> </p-carousel>
-                </div>
-              </div>
-              <<<<<<< HEAD
-              <div class="div-ident-parceiro d-flex mt-3">
-                <div class="dados-parceiro col razao-social">
-                  =======
-                  <div class="div-ident-parceiro d-flex mt-3">
-                    <div class="dados-parceiro razao-social item">
-                      >>>>>>> e594ab91e33f1a01f9cd0d5ab9c298ebb184b03d
-                      <h2 class="mr-2">
-                        <i class="bi bi-geo"></i>
-                        Descrição de Ações Imediatas
-                      </h2>
-                      <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing
-                        elit. Adipisci aperiam aspernatur beatae consequatur
-                        deserunt dolorem est fuga incidunt iste nam officia
-                        placeat quam quidem quisquam reprehenderit, ullam vel
-                        veritatis, vero.
-                      </p>
-                    </div>
-                    <p-divider layout="vertical"></p-divider>
-                    <<<<<<< HEAD
-                    <div class="dados-parceiro col razao-social">
-                      =======
-                      <div class="dados-parceiro razao-social item">
-                        >>>>>>> e594ab91e33f1a01f9cd0d5ab9c298ebb184b03d
-                        <h2 class="mr-2">
-                          <i class="pi pi-camera"></i>
-                          Evidencias fotográficas
-                        </h2>
-                        <p-carousel> </p-carousel>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
     </div>
+  </div>
+</div>
+<div class="div-ident-parceiro d-flex mt-3">
+  <div class="dados-parceiro col razao-social">
+    <h2 class="mr-2">
+      <i class="bi bi-file-earmark-text"></i>
+      Descrição da Não Conformidade
+    </h2>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aperiam
+      aspernatur beatae consequatur deserunt dolorem est fuga incidunt iste nam
+      officia placeat quam quidem quisquam reprehenderit, ullam vel veritatis,
+      vero.
+    </p>
+  </div>
+  <p-divider layout="vertical"></p-divider>
+  <div class="dados-parceiro col razao-social">
+    <h2 class="mr-2">
+      <i class="pi pi-camera"></i>
+      Evidencias fotográficas
+    </h2>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aperiam
+      aspernatur beatae consequatur deserunt dolorem est fuga incidunt iste nam
+      officia placeat quam quidem quisquam reprehenderit, ullam vel veritatis,
+      vero.
+    </p>
+  </div>
+</div>
+<div class="div-ident-parceiro d-flex mt-3">
+  <div class="dados-parceiro col razao-social">
+    <h2 class="mr-2">
+      <i class="bi bi-geo"></i>
+      Descrição de Ações Imediatas
+    </h2>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aperiam
+      aspernatur beatae consequatur deserunt dolorem est fuga incidunt iste nam
+      officia placeat quam quidem quisquam reprehenderit, ullam vel veritatis,
+      vero.
+    </p>
+  </div>
+  <p-divider layout="vertical"></p-divider>
+  <div class="dados-parceiro col razao-social">
+    <h2 class="mr-2">
+      <i class="pi pi-camera"></i>
+      Evidencias fotográficas
+    </h2>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aperiam
+      aspernatur beatae consequatur deserunt dolorem est fuga incidunt iste nam
+      officia placeat quam quidem quisquam reprehenderit, ullam vel veritatis,
+      vero.
+    </p>
   </div>
 </div>
