começa a implementação de puxar dados do NC service

--- a/src/app/pages/ncs/create/steps/step4/identify-nc/identify-nc.component.html
+++ b/src/app/pages/ncs/create/steps/step4/identify-nc/identify-nc.component.html
@@ -18,7 +18,7 @@
         <div>
           <span class="info-titulo">Data de Abertura</span>
           <br />
-          <span class="info-dados">26/04/2022</span>
+          <span class="info-dados">{{this.nonComplicanceService.dataAbertura||"dados não preenchidos"}}</span>
         </div>
       </div>
       <div class="contato-info d-flex flex-row">
@@ -26,7 +26,7 @@
         <div>
           <span class="info-titulo">Data de Fechamento</span>
           <br/>
-          <span class="info-dados">26/04/2022</span>
+          <span class="info-dados">{{this.nonComplicanceService.dataFechamento||"dados não preenchidos"}}</span>
         </div>
       </div>
     </div>
