crialçao do model de ncs e mudanças no service

--- a/src/app/pages/ncs/create/steps/step1/descricao-nc/descricao-nc.component.html
+++ b/src/app/pages/ncs/create/steps/step1/descricao-nc/descricao-nc.component.html
@@ -11,7 +11,7 @@
     <label>Descreva a não conformidade</label>
     <p-editor
       [style]="{ height: '210px' }"
-      [(ngModel)]="this.nonComplicanceService.textAreaNc"
+      [(ngModel)]="this.nonComplicanceService.nc.textAreaNc"
       class="p-editor"
     ></p-editor>
   </div>
@@ -64,7 +64,7 @@
     <label for="desc-area">Descreve as ações imediatas</label>
     <p-editor
       [style]="{ height: '210px' }"
-      [(ngModel)]="this.nonComplicanceService.textAreaAcoes"
+      [(ngModel)]="this.nonComplicanceService.nc.textAreaAcoes"
     ></p-editor>
   </div>
   <div class="col-3 col-attachment">
