--- a/src/app/pages/ncs/create/steps/step3/contacts.component.html
+++ b/src/app/pages/ncs/create/steps/step3/contacts.component.html
@@ -18,7 +18,7 @@
 </div>
 
 <div class="card">
-  <p-table [value]="nonComplianceService.contactsList">
+  <p-table [value]="nonComplianceService.nc.contacts">
     <ng-template pTemplate="header">
       <tr>
         <th>Nome</th>
