faz o carousel mostrar icones e o nome dos arquivos e coloca 2 p-editor para mostrar o texto rico que o usuário digitou

--- a/src/app/pages/ncs/create/steps/step4/products-and-points/products-and-points.component.html
+++ b/src/app/pages/ncs/create/steps/step4/products-and-points/products-and-points.component.html
@@ -68,7 +68,7 @@
         <span class="info-titulo">Número de Controle</span>
         <br>
         <p class="info-dados">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          {{this.nonComplicanceService.controlNumber||"Dado não preenchido"}}
         </p>
       </div>
     </div>
