--- a/src/app/pages/ncs/create/steps/step4/stakeholders/stakeholders.component.html
+++ b/src/app/pages/ncs/create/steps/step4/stakeholders/stakeholders.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-    <p-table [value]="this.nonComplicanceService.contactsList">
+    <p-table [value]="this.nonComplicanceService.allContacts">
         <ng-template pTemplate="header">
             <tr>
                 <th>Nome</th>
