--- a/src/app/pages/ncs/about/about.component.html
+++ b/src/app/pages/ncs/about/about.component.html
@@ -1,24 +1,37 @@
 <app-about-header>
 
 </app-about-header>
+
 <p-tabView>
     <p-tabPanel header="Informações da NC" leftIcon="bi bi-file-earmark-richtext">
-        <app-view-nc></app-view-nc>
+        <div class="content-box">
+            <app-view-nc></app-view-nc>
+        </div>
     </p-tabPanel>
     <p-tabPanel header="Proposta de Solução" leftIcon="bi bi-tools">
-        <app-proposal></app-proposal>
+        <div class="content-box">
+            <app-proposal></app-proposal>
+        </div>
     </p-tabPanel>
     <p-tabPanel header="Custos Incorridos" leftIcon="bi bi-coin">
-        Content 3
+        <div class="content-box">
+            <app-costs></app-costs>
+        </div>
     </p-tabPanel>
     <p-tabPanel header="Avaliação SGQ" leftIcon="bi bi-search">
-        Content 4
+        <div class="content-box">
+            <app-sgq-evaluation></app-sgq-evaluation>
+        </div>
     </p-tabPanel>
     <p-tabPanel header="Monitoramento" leftIcon="bi bi-compass">
-        Content 5
+        <div class="content-box">
+            <app-traking></app-traking>
+        </div>
     </p-tabPanel>
     <p-tabPanel header="Fechamento" leftIcon="bi bi-folder-check">
-        Content 6
+        <div class="content-box">
+            <app-closing></app-closing>
+        </div>
     </p-tabPanel>
 </p-tabView>
 
