--- a/src/app/pages/ncs/create-prop/steps/step2/reasons-why.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step2/reasons-why.component.html
@@ -1,1 +1,41 @@
-<p>reasons-why works!</p>
+<div class="cabecalho">
+<h1 class="mr-3">5 Porquês</h1>
+<p>
+    Descreva a possivel causa do problema utilizando o método dos 5 porquês.
+</p>
+</div>
+<div class="d-flex justify-content-center">
+    <div class="d-block">
+        <div class="d-flex">
+            <p-chip>
+                1
+            </p-chip>
+            <label class="ml-3">Porquê lorem</label>
+        </div>
+        <textarea  pInputTextarea readonly cols="60" rows="5" class="textarea">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium animi dignissimos illum minima mollitia voluptatum.
+
+        </textarea>
+    </div>
+</div>
+<div class="d-flex justify-content-center">
+    <button type="button"
+            class="btn btn-dark"
+    >
+        <i class="bi bi-arrow-left"></i>
+        Voltar
+    </button>
+    <button type="button"
+            class="btn btn-dark mx-5"
+    >
+        Identificar Causa Raiz
+        <i class="bi bi-check2"></i>
+    </button>
+
+    <button
+            type="button"
+            class="btn btn-dark"
+    >
+        Aprofundar
+        <i class="bi bi-arrow-right"></i>
+    </button>
+</div>
