--- a/src/app/pages/ncs/about/proposal/proposal.component.html
+++ b/src/app/pages/ncs/about/proposal/proposal.component.html
@@ -11,10 +11,14 @@
     </div>
     <div class="d-flex justify-content-end align-items-center mb-3">
 
-        <button class="btn btn-dark ml-3">
+        <a
+                href="/ncs/createProp"
+                role="button"
+                class="btn btn-dark"
+        >
             Criar Proposta
             <i class="bi bi-file-earmark-medical"></i>
-        </button>
+        </a>
     </div>
 </div>
 <div class="image-box d-flex align-items-center justify-content-center mt-5">
@@ -26,8 +30,12 @@
 <h5 class="text-center">Contate o responsável pela análise caso este não seja você.</h5>
 
 <div class="text-center">
-    <button type="button" class="btn btn-dark">
+    <a
+            href="/ncs/createProp"
+            role="button"
+            class="btn btn-dark"
+    >
         Criar Proposta
         <i class="bi bi-file-earmark-medical"></i>
-    </button>
+    </a>
 </div>
