--- a/src/app/pages/ncs/create-prop/steps/step1/ishikawa-diagram.component.css
+++ b/src/app/pages/ncs/create-prop/steps/step1/ishikawa-diagram.component.css
@@ -14,6 +14,13 @@ h2 {
     font-size: 15px;
     color: gray;
 }
-.cinza{
+.caixa-cinza{
     background-color: #EEEEEE;
+    border-radius: 8px;
+}
+.textarea{
+    overflow-y:auto;
+    resize:none;
+    border: 2px solid #333333;
+    border-radius: 8px;
 }
